fix letter spacing

--- a/EPUB/Styles/style.css
+++ b/EPUB/Styles/style.css
@@ -175,7 +175,6 @@ p {
 .titlepage-title {
   text-indent: 0;
   font-size: 2em;
-  letter-spacing: -0.022em;
   margin-top: 10%;
   line-height: 1.2em;
   text-align: center;
